Add initial data structure

--- a/TODO
+++ b/TODO
@@ -6,7 +6,9 @@ Front End:
 
     
     JavaScript:
-
+        data:  
+            ✔ Get data files templated @started(18-10-27 19:13) @done(18-10-27 19:38) @lasted(25m1s)
+            ☐ Import data into data files
 
 
 
